--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,7 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f| %>
-    <%= devise_error_messages! %>
-  
-  <div class="field">
-    <%= f.label :avatar %> <br />
-     <%= f.file_field :avatar %>
-  </div>
+<%= form_for(@user, as: resource_name, url: user_registration_path(@user)) do |f| %>
+  <%= devise_error_messages! %>
 
   <div class="field">
     <%= f.label :email %><br />
